# instructional_agents

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.zh.md  api_server.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start.sh  stop.sh
.github/workflows/: publish.yml
catalog/: mwe_catalog.json  uploaded_6656a294_llm-agent_catalog.json
catalog/references/: latex_template.aux  latex_template.nav  latex_template.out  latex_template.toc  latex_template.vrb
docs/: API_DOCUMENTATION.md  API_DOCUMENTATION.zh.md  DEBUG_LOGS.md  FILES_GENERATED.md  FILES_GENERATED.zh.md  FRONTEND_SLIDE_OPTIMIZATION.md  HOW_TO_GET_TASK_ID.md  IMPLEMENTATION_SUMMARY.md  README.md  README.zh.md  README_DOCKER.md  README_DOCKER.zh.md  SLIDE_OPTIMIZATION.md  SLIDE_OPTIMIZATION_IMPLEMENTATION.md  WORKFLOW_DIAGRAM.md  WORKFLOW_DOCUMENTATION.md  WORKFLOW_DOCUMENTATION.zh.md
frontend/: app.js  debug_visibility.html  index.html  styles.css  test_logs.html
src/: ADDIE.py  ADDIE_optimize.py  __init__.py  agents.py  build_pptx.js  compile.py  evaluate.py  latex_to_pptx.py  optimize.py  pdf_processor.py  slide_knowledge_base.py  slide_refiner.py  slides.py
test/: lesson_kid.md  lesson_tech.md
test/themes/: kids.css  tech.css
tests/: test_agents.py  test_config.py  test_slides.py
